crud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crud-depl
  template:
    metadata:
      labels:
        app: crud-depl
    spec:
      containers:
      - name: crud-node
        image: zokarnalayak/crud-node
        ports:
        - containerPort: 3030
