crud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-service
spec:
  selector:
    app: crud-depl
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3030
