crud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-ingress
#    namespace: foo
spec:
  ingressClassName: nginx
  rules:
    - host: crud1.linuxeval.eu.org
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: crud-service
                port:
                  number: 3000
            path: /
  tls:
  - hosts:
    - crud1.linuxeval.eu.org
    secretName: default-example
